# hive

./: .coverage  .cursorrules  .editorconfig  .env.example  .gitattributes  .gitignore  .hive-metrics.json  .hive-watch-snapshot.json  .mcp.json  .pr-financial-ledger-agent-4659.md  .pre-commit-config.yaml  .python-version  AGENTS.md  BUG_FIX_SUMMARY.md  CHANGELOG.md  CHANGES_SUMMARY.md  COMMIT_MSG  COMPLETION_SUMMARY.md  CONTAINERIZATION.md  CONTRIBUTING.md  CONTRIBUTIONS_REPORT.md  CONTRIBUTION_INDEX.md  CONTRIBUTION_SUMMARY.md  CONTRIBUTOR_GUIDE.md  CRITICAL_ISSUES.md  CRITICAL_ISSUES_DEEP_DIVE.md  DEPLOYMENT.md  DEVELOPER.md  Dockerfile  Dockerfile.dev  Dockerfile.lifecycle  ENVIRONMENT_SETUP.md  ERROR_HANDLING_DEMO.py  FINAL_SUBMISSION_CHECKLIST.md  FINAL_SUMMARY.md  FIXES_AND_OPTIMIZATIONS.md  FIXES_APPLIED.md  GITHUB_ISSUE_TEMPLATE.md  GITHUB_PR_TEMPLATE.md  GPG_SIGNING.md  (+77 more)
core/: .env.example  Authentificator-tool.py  MCP_BUILDER_TOOLS_GUIDE.md  MCP_INTEGRATION_GUIDE.md  MCP_SERVER_GUIDE.md  PR_CHANGES.md  README.md  antigravity_auth.py  codex_oauth.py  google_auth.py  pyproject.toml  requirements.txt  ruff.toml  setup_mcp.py  setup_mcp.sh  validate_preflight.py  verify_mcp.py
core/demos/: bug_fix_demonstration.py  event_loop_wss_demo.py  github_outreach_demo.py  handoff_demo.py  llm_routing_failure_modes_demo.py  openclaw_outreach_demo.py  org_demo.py
core/examples/: README.md  build_blog_writer_agent.py  caching_demo.py  demo_amazon_research.py  demo_self_improvement.py  document_processing_agent.py  evolution_demo.py  hitl_manual_agent.py  latency_benchmark_groq.py  manual_agent.py  mcp_integration_example.py  metrics_demo.py  starter_coding_agent.py  test_mock_flag.py  versioning_demo.py
core/framework/: Dashbord-UI-Hive.kt  Hive-KANBAN.kt  View-model-hive.kt  __init__.py  __main__.py  analytics.py  cache.py  cli.py  cli_skill.py  config.py  constants.py  context.py  credentials.py  doctor.py  errors.py  health.py  http_pool.py  logging.py  logging_config.py  model_cli.py  ratelimit.py  resilience.py  telemetry.py
core/frontend/: index.html  package-lock.json  package.json
core/test_clean/: pyvenv.cfg
core/tests/: Mobile-App-Hive-UniTest.py  Test-app-Hive-suite.py  conftest.py  debug_codex_stream.py  debug_codex_verbose.py  integration_test_cache.py  repro_dos.py  test_aden_sync_error.py  test_agent_builder_keyless_search.py  test_agent_builder_path_traversal.py  test_agent_discovery.py  test_agent_runner_load_error_handling.py  test_agent_runtime_error_handling.py  test_atomic_spillover.py  test_audit.py  test_blocks.py  test_builder.py  test_builder_query.py  (+219 more)
(+2573 files in other folders)
