[project]
name = "framework"
version = "0.2.0"
description = "High-performance goal-driven agent runtime with async execution and production-grade observability"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core
    "pydantic>=2.5.0",
    "anthropic>=0.40.0",
    "litellm>=1.81.0",
    "mcp>=1.0.0",
    "fastmcp>=2.0.0",
    
    # High-Performance Serialization
    "orjson>=3.9.0",
    
    # Async Essentials
    "aiofiles>=23.2.0",
    "httpx[http2]>=0.27.0",
    
    # Caching
    "cachetools>=5.3.0",
    
    # Structured Logging
    "structlog>=24.1.0",
    
    # Testing
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.0",
]

[project.optional-dependencies]
# Production storage backends
storage = [
    "redis[hiredis]>=5.0.0",
    "asyncpg>=0.29.0",
]
# Fast event loop (Linux/macOS only)
performance = [
    "uvloop>=0.19.0;sys_platform!='win32'",
]
# Observability
observability = [
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-otlp>=1.22.0",
]
# All optional dependencies
all = [
    "redis[hiredis]>=5.0.0",
    "asyncpg>=0.29.0",
    "uvloop>=0.19.0;sys_platform!='win32'",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-otlp>=1.22.0",
]
# Development tools
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["framework"]

[tool.ruff]
target-version = "py311"

line-length = 100

lint.select = [
  "B",   # bugbear errors
  "C4",  # flake8-comprehensions errors
  "E",   # pycodestyle errors
  "F",   # pyflakes errors
  "I",   # import sorting
  "Q",   # flake8-quotes errors
  "UP",  # py-upgrade
  "W",   # pycodestyle warnings
]

lint.isort.combine-as-imports = true
lint.isort.known-first-party = ["framework"]
lint.isort.section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]